--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.1",
   "private": false,
   "description": "营销",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "main:h5": "dist/h5/index.js",
   "scripts": {
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
@@ -22,6 +23,10 @@
   "license": "MIT",
   "dependencies": {
     "@tarojs/components": "1.2.22",
+    "@tarojs/mobx": "1.2.22",
+    "@tarojs/mobx-h5": "1.2.22",
+    "@tarojs/mobx-rn": "1.2.22",
+    "@tarojs/rn-runner": "1.2.22",
     "@tarojs/router": "1.2.22",
     "@tarojs/taro": "1.2.22",
     "@tarojs/taro-alipay": "1.2.22",
@@ -29,13 +34,10 @@
     "@tarojs/taro-swan": "1.2.22",
     "@tarojs/taro-tt": "1.2.22",
     "@tarojs/taro-weapp": "1.2.22",
-    "@tarojs/rn-runner": "1.2.22",
-    "@tarojs/mobx": "1.2.22",
-    "@tarojs/mobx-h5": "1.2.22",
-    "@tarojs/mobx-rn": "1.2.22",
     "mobx": "4.8.0",
+    "nerv-devtools": "^1.3.9",
     "nervjs": "^1.3.9",
-    "nerv-devtools": "^1.3.9"
+    "semver": "^7.3.2"
   },
   "devDependencies": {
     "@types/react": "16.3.14",
